# Demo

./: Logging.py  README.md  Resquests.py  TraverDir.py
Excel/: readme.docx  v1_1.py  图书信息.xlsx
Pythonbasic/: readme.txt
Pythonbasic/01-if练习/: demo05.py  demo06.py  demo1.py  demo10.py  demo3.py  demo4.py  demo5.py  demo7.py  demo9.py
Pythonbasic/02-for练习/: demo.py  demo01.py  demo03.py  demo04.py  demo05.py  demo1.py  demo4.py  demo5.py
Pythonbasic/03-while循环练习/: demo02.py  demo03.py  demo2.py  demo3.py
Pythonbasic/04-循环其他语句练习/: demo02.py  demo1.py  demo3.py  demo4.py  demo5.py
Pythonbasic/05-函数练习/: demo02.py  demo04.py  demo1.py  demo2.py  demo3.py  demo6.py  demo7.py
Pythonbasic/06-class类练习/: demo04.py  demo05.py  demo07.py  demo09.py
Pythonbasic/06-字符串和列表练习/: demo1.py  demo2.py  demo3.py  demo4.py  demo5.py  demo6.py  demo7.py  demo8.py
Pythonbasic/07-元组和字典练习/: demo00.py  demo01.py  demo02.py  demo03.py  demo04.py  demo05.py  demo06.py  demo07.py
Pythonbasic/08-文件和异常练习/: demo00.py  demo00_1.py  demo00_2.py  demo00_3.py  demo00_4.py  demo00_5.py  demo01.py  demo01_1.py  demo01_2.py
Pythonbasic/09-类和对象练习/: demo00.py  demo00_1.py  demo00_2.py  demo00_3.py  demo00_4.py  demo00_5.py  demo00_6.py  demo00_7.py  demo00_8.py  demo01.py  demo01_1.py  demo01_2.py
Pythonbasic/day1-5/: demo.py  demo1.py  demo10.py  demo11.py  demo12.py  demo13.py  demo14.py  demo15.py  demo16.py  demo17.py  demo2.py  demo3.py  demo4.py  demo5.py  demo6.py  demo7.py  demo8.py  demo9.py
Pythonbasic/module/: demoa.py  demob.py  m1.py
Pythonbasic/函数练习/: demo1.py  demo2.py  demo3.py  demo4.py  demo5.py  demo6.py  demo7.py
Python运维/: battery.py  cpu_workload.py  disk_usage.py  free.py  ifconfig.py  iotop.py  killall.py  nettop.py  pidof.py  pmap.py  procinfo.py  procsmem.py  ps.py  pstree.py  sensors.py  top.py  who.py  winservices.py
csv/exportData/: demo1.py
csv/importData/: demo1.py  fudianshuData.csv  zhengshuData.csv  zifuchuanData.csv
engineer_management/: 项目需求（new）.docx  项目需求（有分析）.docx
engineer_management/engineer_management/: engineer.xlsx
guodongdsheng/: WebTest.py
guodongdsheng/Python/: AnalyseLog.py  BestCheck.py  Brower.py  Case0.py  Case1.py  Case2.py  Case3.py  ChangeRoot.py  CheckOperation.py  CheckWithArgv.py  CheckWithLog.py  Client.py  CopyFile.py  CreateWav.py  PyAudioRec.py  SDETools.py  Server.py  StrCheck.py  TTSWithWav.py  TestThread.py  UpdateTMS.py  click.xml  ee.py  stock_sh.xlsx  (+1 more)
seleniumproject/: demo01.py  test1.py  test2.py
ziguangzhanrui/8955-auto test scripts/powerOnOffExceptionStop/tools/relayserver/: CMakeLists.txt  main.cpp  maindialog.cpp  maindialog.h  maindialog.ui
(+669 files in other folders)
